# noodle-trader

./: .gitignore  README.md  pyproject.toml
params/: params_gen.toml  params_ict.toml
src/noddle_trader/: data_feed.py  main.py  strategy.py  strategyBU.py
